--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
       <!-- Featured Products -->
       <section class="py-12 bg-gray-100">
         <div class="container mx-auto">
-          <h2 class="text-3xl font-bold text-center mb-8">Featured Products</h2>
+          <h2 class="text-3xl font-bold text-center mb-8">Featured Products...</h2>
           <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
             <div class="bg-white p-4 rounded-lg shadow-md">
               <div class="h-48 bg-gray-300 rounded mb-4"></div>
